# Ai_hospital_robot_fleet_simulation

./: BATTERY_AND_MAP_FIXES.md  DASHBOARD_ENHANCEMENTS.md  Dockerfile  PHASE_3.1_SUMMARY.md  README.md  docker-compose.yml
hospital_ws/install/hospital_fleet_manager/share/hospital_fleet_manager/: package.dsv  package.ps1  package.sh  package.xml
hospital_ws/install/hospital_fleet_manager/share/hospital_fleet_manager/config/: nav2_params.yaml
hospital_ws/install/hospital_fleet_manager/share/hospital_fleet_manager/launch/: gazebo_hospital.launch.py
hospital_ws/install/hospital_fleet_manager/share/hospital_fleet_manager/models/: hospital_robot.urdf
hospital_ws/install/hospital_fleet_manager/share/hospital_fleet_manager/worlds/: hospital.world
hospital_ws/src/hospital_fleet_manager/: MANIFEST.in  notebook_hospital_fleet_sim.ipynb  package.xml  setup.cfg  setup.py
hospital_ws/src/hospital_fleet_manager/config/: ai.yaml  robots.yaml  tasks.yaml
hospital_ws/src/hospital_fleet_manager/hospital_fleet_manager/: README.md  __init__.py  ai_predictor.py  dashboard.py  dashboard_enhanced.py  dashboard_visual.py  fleet_scheduler.py  hospital_map.py  robot_simulator.py  scenario_loader.py
hospital_ws/src/hospital_fleet_manager/hospital_fleet_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hospital_ws/src/hospital_fleet_manager/hospital_fleet_manager/launch/: gazebo_hospital.launch.py  hospital_stack.launch.py
hospital_ws/src/hospital_fleet_manager/hospital_fleet_manager/maps/: hospital_map.pgm
hospital_ws/src/hospital_fleet_manager/hospital_fleet_manager/models/: ai_model.joblib  model.config  model.sdf
hospital_ws/src/hospital_fleet_manager/hospital_fleet_manager/worlds/: hospital.world
hospital_ws/src/hospital_fleet_manager/test/: test_ai_predictor.py  test_fleet_scheduler.py  test_hospital_map.py  test_scenario_loader.py
install/: setup.sh  (+1 more)
(+44 files in other folders)
