<?xml version="1.0"?>
<package format="3">
  <name>hospital_fleet_manager</name>
  <version>0.1.0</version>
  <description>AI-Based Hospital Robot Fleet Simulation package</description>
  <maintainer email="you@example.com">AI Hospital Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_type>ament_python</build_type>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>nav2_bringup</depend>
  <depend>robot_state_publisher</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <test_depend>pytest</test_depend>
</package>
