<?xml version="1.0"?>&#10;<package format="3">&#10;  <name>hospital_fleet_manager</name>&#10;  <version>0.1.0</version>&#10;  <description>AI-Based Hospital Robot Fleet Simulation package</description>&#10;  <maintainer email="you@example.com">AI Hospital Team</maintainer>&#10;  <license>Apache-2.0</license>&#10;&#10;  <buildtool_depend>ament_python</buildtool_depend>&#10;  <build_type>ament_python</build_type>&#10;&#10;  <depend>rclpy</depend>&#10;  <depend>std_msgs</depend>&#10;&#10;  <test_depend>ament_lint_auto</test_depend>&#10;  <test_depend>ament_lint_common</test_depend>&#10;&#10;  <exec_depend>python3</exec_depend>&#10;  <exec_depend>python3-yaml</exec_depend>&#10;  <exec_depend>python3-flask</exec_depend>&#10;  <test_depend>pytest</test_depend>&#10;&#10;</package>
